still trying to fix css animation flickers on chrome

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,9 @@ html {
   padding: 0;
   margin: 0;
 }
+body {
+  -webkit-transform:translate3d(0,0,0);
+}
 .swiper-button-prev, .swiper-button-next {
   color: white !important;
 }
